[metadata]
name = twdep
version = attr: twdep.__version__
author = Leif Denby
author_email = leif[at]denby.eu
description = taskwarrior depedency tree in your terminal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cloudsci/twdep

[options]
packages=find:
install_requires =
  rich
  asciidag

[options.packages.find]
where=.

[options.extras_require]
test =
  pytest
dev =
  %(test)s
  pre-commit
  ipython

[isort]
profile=black

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
